examples/neg/issue373/handler_no_annotation.effekt
interface Eff[A] {
  def op(x: A): A
}

def main() =
  try {
    val msg: String = eff.op("hello");
    println(msg)
  } with eff: Eff[Int] { def op(x) = resume(x / 1) }